# khalgebra

./: README.md  pyproject.toml
bench/: bench_dsymm.py  bench_dsymv.py  bench_riemann.py
khalgebra/: __init__.py  _types.py  dsymm.py  dsymv.py  riemann.py  sym22.py
tests/: test_dsymm.py  test_dsymv.py  test_riemann.py  test_sym22.py
