[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "khalgebra"
version = "0.1.1"
description = "Provably-optimal bilinear algorithms for symmetric linear algebra"
authors = [{name = "Mahmood Khalil"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: The Unlicense (Unlicense)"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jax>=0.4", "jaxlib>=0.4"]
keywords = ["linear-algebra", "blas", "dsymv", "riemann", "bilinear", "optimal", "jax"]

[project.optional-dependencies]
dev = ["pytest>=8", "numpy"]

[project.urls]
Homepage = "https://github.com/khalil/khalgebra"
